test/files/pos/t12647b/Test_3.scala

object Test extends App {
  val resolver = new ValueResolver
  println(resolver.resolve.value)
}
